#16 - Duong04 - Update source code
